--- a/templates/keenetic/keenetic_routers_edit_default.html
+++ b/templates/keenetic/keenetic_routers_edit_default.html
@@ -59,6 +59,7 @@
   <b><span class = "text-danger">Новая прошивка:</span></b> [#NEW_FIRMWARE#] <a href="[#HREF#]" target="_blank">Список изменений</a><br>
   [#endif FIRMWARE#]
   <b>Серийный номер:</b> [#SERIAL#] <br>
+  <b>Системный ID:</b> [#ID#] <br>
   <b>Статус:</b> [#if STATUS==1#]<span class="label label-success" title="Интернет есть">ONLINE</span>
 				[#else#]<span class="label label-danger" title="Интернета нет">OFFLINE</span>
 				[#endif STATUS#]<br>
