-Исправлена бесконечная авторизация; -Исправлено зависание при попытке зайти в свойства оффлайн роутера; -Исправлено изменение свойств роутера, если объект с именем роутера уже присутствует в системе.

--- a/templates/keenetic/help_ru.html
+++ b/templates/keenetic/help_ru.html
@@ -22,7 +22,7 @@
             </ul>
 			<p>Для взаимодействия с роутером используется REST API (/rci). Попробовать можно по адресу http://IP_роутера/a.</p>
            	<p>В модуле имеется цикл, который раз в указанное пользователем количество секунд опрашивает роутер, чтобы получить информацию о подключенных устройствах, сетях и пр.</p>
-            <p>Для добавления интернет-центра нажмите кнопку +Добавить, придумайте название роутера, введите IP адрес или KeenDNS имя, имя пользователя и пароль. Можно сразу изменить период опроса роутера в секундах (по умолчанию 5). После нажатия кнопки Добавить модуль подключится к роутеру и он появится в списке доступных устройств.
+            <p>Для добавления интернет-центра нажмите кнопку +Добавить, придумайте название роутера, введите IP адрес или KeenDNS имя, имя пользователя и пароль. Можно сразу изменить период опроса роутера в секундах (по умолчанию 5, 0 - не опрашивать). После нажатия кнопки Добавить модуль подключится к роутеру и он появится в списке доступных устройств.
 			Здесь же сразу можно установить количество секунд, через которое модуль будет отправлять роутеру команду перезагрузки после исчезновения доступа в интернет. 0 - не перезагружать</p>
 			<p>В настройках (значок шестеренки) включить отладку DebMes</p>
          </div>
@@ -230,7 +230,7 @@ $result = $keenetic->api(array('id'=>1,'path'=>'show/interface','data'=>''));</p
       <div class="panel-body collapse" id="dns_help">
         <div style="width:900px">
 		  <p>Используется для назначения IP адресам доменных имен.</p>
-		   <p>В связи с тем, что настройка данного функционала имеется только в командной строке, решил вывести данный функционал в модуль.</p>
+		   <p>В связи с тем, что настройка данного функционала имеется только в командной строке, решил вывести его в модуль.</p>
 		  <p>Работает <strong>только внутри</strong> локальной сети.</p>
 		</div>
       </div>
